add dmg receive to players, add banner flag in arena

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         </div>
       </div>
     </div>
+    <div id="waiting_room">
+      <h1>Waiting for players...</h1>
+    </div>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
