replace quarks with nebula to improve spell particles

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
       <h1>Waiting for players...</h1>
     </div>
     <div id="app"></div>
+    <script type='text/javascript' src='node_modules/three-nebula/build/three-nebula.js'></script>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
