--- a/index.html
+++ b/index.html
@@ -5,47 +5,62 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="stylesheet" href="/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wizard Duels</title>
+    <title>Sorcery Skirmish</title>
   </head>
   <body>
     <div id="ui">
-      <div class="main_title">
-        <h1>WIZ DUELS</h1>
+      <h1 class="main_title">Sorcery Skirmish</h1>
+      <div class="d-flex flex-column justify-center">
         <div>
-          <label for="player_name">Your in game name</label><br />
-          <input id="player_name" name="player name" type="text" placeholder="" />
+          <div class="d-flex justify-center">
+            <button id="check_create">Create game</button>
+            <br />
+            <button id="check_join">Join game</button>
+          </div>
         </div>
       </div>
 
-      <div class="d_flex">
-        <div>
-          <h1>Create Arena</h1>
+      <div class="">
+        <div id="create_game_ui">
+          <h2>Create New Game</h2>
           <br />
+          <label for="player_name_create">Player name</label><br />
+          <input id="player_name_create" name="player name" type="text" placeholder="" />
+          <br /><br />
           <label for="create_game_name">Game Name:</label><br />
           <input
             id="create_game_name"
             name="create game"
             type="text"
-            placeholder="game name"
+            placeholder=""
           /><br /><br />
-          <button id="create_game">Create arena</button>
+          <button id="create_game">Create game</button>
         </div>
-        <div>
-          <h1>Join Arena</h1>
+        <div id="join_game_ui">
+          <h2>Join Existing Game</h2>
           <br />
+          <label for="player_name_join">Player name</label><br />
+          <input id="player_name_join" name="player name" type="text" placeholder="" />
+          <br /><br />
           <label for="join_game_name">Game Name:</label><br />
           <input
             id="join_game_name"
             name="join game"
             type="text"
-            placeholder="game name"
+            placeholder=""
           /><br /><br />
-          <button id="join_game">Join arena</button>
+          <button id="join_game">Join game</button>
         </div>
       </div>
     </div>
     <div id="waiting_room">
+      <img src="/fire-loading.gif" width="150" alt="">
       <h1>Waiting for players...</h1>
+    </div>
+    <div id="end_game">
+      <h1>Game Over</h1>
+      <h2 id="end_game_winner"></h2>
+      <button id="end_game_button">Play again</button>
     </div>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
