--- a/index.html
+++ b/index.html
@@ -55,12 +55,22 @@
     </div>
     <div id="waiting_room">
       <img src="/fire-loading.gif" width="150" alt="">
-      <h1>Waiting for players...</h1>
+      <h2>Waiting for players...</h2>
     </div>
     <div id="end_game">
       <h1>Game Over</h1>
       <h2 id="end_game_winner"></h2>
       <button id="end_game_button">Play again</button>
+    </div>
+    <div id="spell_bar">
+      <button id="fire-button">
+        <img src="/icons/fire-ray.png" alt="">
+        <span id="fire-cooldown"></span>
+      </button>
+      <button id="jump-button">
+        <img src="/icons/sprint.png" alt="">
+        <span id="jump-cooldown"></span>
+      </button>
     </div>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
