improve UI and stop user interaction when players are dead, fix winner message, add camera to point at scene before players join

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="stylesheet" href="/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sorcery Skirmish</title>
+    <title>Wizard Brawls</title>
   </head>
   <body>
     <div id="ui">
-      <h1 class="main_title">Sorcery Skirmish</h1>
+      <h1 class="main_title">Wizard Brawls</h1>
       <div class="d-flex flex-column justify-center">
         <div>
           <div class="d-flex justify-center">
@@ -55,7 +55,7 @@
     </div>
     <div id="waiting_room">
       <img src="/fire-loading.gif" width="150" alt="">
-      <h2>Waiting for players...</h2>
+      <h2>waiting for players...</h2>
     </div>
     <div id="end_game">
       <h1>Game Over</h1>
