add restart game functionality with re-creating the room and keeping players names

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div id="end_game">
       <h1>Game Over</h1>
       <h2 id="end_game_winner"></h2>
-      <button id="end_game_button">Play again</button>
+      <button id="restart_game">Play again</button>
     </div>
     <div id="spell_bar">
       <button id="fire-button">
