added close button to create and join  cards

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
       <div class="">
         <div id="create_game_ui">
+          <img class="close" src="/icons/cross.png" alt="">
           <h2>Create New Game</h2>
           <br />
           <label for="player_name_create">Player name</label><br />
@@ -37,6 +38,7 @@
           <button id="create_game">Create game</button>
         </div>
         <div id="join_game_ui">
+          <img class="close" src="/icons/cross.png" alt="">
           <h2>Join Existing Game</h2>
           <br />
           <label for="player_name_join">Player name</label><br />
